# GP_labs

./: .gitignore  README.md
1/: CMakeLists.txt  GPSLab1.cpp  GPSLab1.hpp  main.cpp
10/: CMakeLists.txt  Camera.cpp  SkyBox.cpp  main.cpp
2/: CMakeLists.txt  main.cpp
2/lib/: CMakeLists.txt
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
4/shaders/: shaderStart.frag  shaderStart.vert
5/: CMakeLists.txt  Camera.cpp  main.cpp
5/shaders/: shaderStart.frag  shaderStart.vert
6/: CMakeLists.txt  Camera.cpp  main.cpp
6/shaders/: shaderStart.frag  shaderStart.vert
7/7_1/: CMakeLists.txt  main.cpp
7/7_1/models/teapots/: teapot4segU.mtl
7/7_1/shaders/: shaderStart.frag  shaderStart.vert
7/7_2/: CMakeLists.txt  main.cpp
7/7_2/models/teapots/: teapot20segU.mtl
7/7_2/shaders/: shaderPPL.frag  shaderPPL.vert  shaderStart.vert
8/Laboratory_8_resources/: CMakeLists.txt  main.cpp
8/Laboratory_8_resources/shaders/: shaderStart.frag  shaderStart.vert
9/: CMakeLists.txt
project/: CMakeLists.txt  Camera.cpp  Camera.hpp  main.cpp
